# tfhe

./: .gitignore  README.md
my-examples/: CMakeLists.txt  INSTALL  example-addition-boot.cpp  example-orig-addition-boot.cpp  example-parallel-addition.cpp  ffnt-error-hunt.cpp  lagrangehalfc_impl.h  parallel-addition.cpp
my-examples/orig-addition-boot-src/: CMakeLists.txt
my-examples/parallel-addition-src/: CMakeLists.txt  bootstrapping-functions.cpp  bootstrapping-functions.h  parallel-addition-impl.cpp  parallel-addition-impl.h  parallel-addition-tfhe-params.cpp
src/: CMakeLists.txt
src/afnt/: Makefile  bit-reverse.rb  main  main.cpp
src/include/: tfhe_gate_bootstrapping_functions.h
src/libtfhe/: boot-gates.cpp  lwe-bootstrapping-functions-fft.cpp  tgsw-fft-operations.cpp
src/libtfhe/fft_processors/: CMakeLists.txt
src/libtfhe/fft_processors/nayuki/: fft-model-of-x8664-avx.c  fft_processor_nayuki.cpp  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h
src/libtfhe/fft_processors/nayuki-FFNT/: CMakeLists.txt  ffnt-test.c  ffnt.h  fft-model-of-x8664-avx.c  fft-portable.c  fft-test.c  fft-x8664-avx-aux.c  fft-x8664-avx-reverse.s  fft-x8664-avx.s  fft.h  fft_processor_nayuki.cpp  fft_processor_nayuki_FFNT.cpp  lagrangehalfc_impl.cpp  lagrangehalfc_impl.h  readme.txt
src/libtfhe/fft_processors/nayuki-FFNT/avx-TODO/: fft-model-of-x8664-avx.c  fft-x8664-avx-aux.c  fft-x8664-avx-reverse.s  fft-x8664-avx.s
